arc.TouchPerf: add touch screen move test by replay kernel events
Touch.go shows higher latency for move events, so simulate touch screen
move events by evemu-play.

BUG=b:173453054
TEST=tast -verbose run <DUT> arc.TouchPerf(.vm) pass

Change-Id: Idbb13547ec5f6b010ec03f72e1fc9b57c26ea7ad

--- a/android/ArcInputLatencyTest/res/layout/event_list_item.xml
+++ b/android/ArcInputLatencyTest/res/layout/event_list_item.xml
@@ -81,7 +81,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Kernel Timestamp"
+            android:text="Kernel Timestamp (Android)"
             android:textStyle="bold" />
 
         <TextView
@@ -126,7 +126,7 @@
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Latency (difference)"
+            android:text="Latency in Android (difference)"
             android:textStyle="bold" />
 
         <TextView
